[package]
name = "sbatch-rs"
version = "1.0.0"
edition = "2024"
authors = ["Andrew Tupper <andrew.s.tupper.phd@gmail.com>"]
repository = "https://github.com/toopz/sbatch-rs"
license = "MIT"
readme = "README.md"
description = "A simple sbatch command generator"
keywords = ["slurm", "sbatch", "hpc"]

[dependencies]
thiserror = "2.0.11"

[dev-dependencies]
rstest = "0.24.0"
